<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3f2f9"
    android:orientation="vertical">

    <include layout="@layout/top_return_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/register_user" />

        <TextView
            android:text="新用户注册"
            android:layout_width="match_parent"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_height="50dp" />

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/register_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/register_user_tv"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_height="40dp"
            android:src="@drawable/register_user_edit"
            />
        <EditText
            android:id="@+id/userName_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:hint="用户名"
            android:inputType="text"
            android:maxLines="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/register_user_tv"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_height="40dp"
            android:src="@drawable/register_user_edit"
            />
        <EditText
            android:id="@+id/userName_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:hint="密码"
            android:inputType="text"
            android:maxLines="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_height="40dp"
            android:src="@drawable/register_user_edit"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:hint="用户名"
            android:inputType="text"
            android:maxLines="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/register_user_tv"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_height="40dp"
            android:src="@drawable/register_user_edit"
            />
        <EditText
            android:id="@+id/userName_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:hint="用户名"
            android:inputType="text"
            android:maxLines="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <View
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/userPhone_line"
            android:layout_alignParentBottom="true"
            android:background="@color/line_color"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <TextView
            android:id="@+id/userPhone_tv"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/userPhone_pre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <EditText
            android:maxLength="11"
            android:maxLines="1"
            android:inputType="phone"
            android:id="@+id/userPhone_et"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:layout_marginLeft="50dp"
            android:hint="@string/userPhone_hint"
            android:text="1234567890"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/userPhone_line" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <View
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/userPassword_line"
            android:layout_alignParentBottom="true"
            android:background="@color/line_color"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <TextView
            android:id="@+id/userPassword_tv"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/userPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <EditText
            android:maxLength="16"
            android:maxLines="1"
            android:inputType="textPassword"
            android:id="@+id/userPassword_et"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@id/userPassword_tv"
            android:hint="@string/userPassword_hint"
            android:text="123456"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/register_bt"
        android:background="@drawable/send_bt_bg"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>